# STAG-Open62541-Data-Consumer-Adapter

./: .amalgam.css  .amalgam_index.html  .check_code_coverage.sh  .clang-format  .clang-tidy  .do_release.sh  .gitignore  .gitlab-ci-templates.yml  .gitlab-ci.yml  .gitmodules  .hspt-cpp  .make_public.sh  .run_valgrind.sh  .update_versioning.sh  .valgrind_targets.json  AUTHORS  CHANGELOG  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.in  CerealDepenency.txt  Doxyfile  GoogleTestDependency.txt  InformationModelDepenency.txt  JsonDependency.txt  NOTICE  README.md  check_code_coverage.sh  ci-variables.yml  compiler-toolchain.cmake  conanfile.py  conanfile.txt  configure_project.sh  defaultConfig.json  model-translator.code-workspace  model_translator-config.cmake  sonar-project.properties  valgrind.supp
cmake/: compiler_settings.cmake  conan_install.cmake  conan_provider.cmake  conan_support.cmake  dependencies.cmake  linter.cmake  macros.cmake
conan/: conanfile.py
conan/test_package/: example.cpp
config/: defaultConfig.json  loggerConfig.json  stag_open62541_historizer.conf
docs/manual/: main.md
includes/: NodeInformation.h
includes/Adapter/: OpcuaAdapter.hpp  Open62541Adapter.hpp
includes/ConsumerNotifier/: ConsumerNotifier.hpp
includes/Historizer/: HistorianBits.hpp  Historizer.hpp  HistorizerUtils.hpp  HistoryResult.hpp
includes/NodeBuilder/: NodeBuilder.hpp
includes/NodeInformation/: NodeInformation.h
includes/OpcuaAdapter/: ConsumerNotifier.hpp  OpcuaAdapter.hpp
includes/Opcua_Adapter/: ConsumerNotifier.hpp  OpcuaAdapter.hpp
includes/Opcua_Logger/: NullLogger.hpp
includes/Open62541_Server/: Config.hpp  Configuration.hpp  DatabaseDriver.hpp  HaSLLLogger.hpp  HaSLL_Logger.hpp  Historizer.hpp  NodeBuilder.hpp  NodeCallbackHandler.hpp  NodeId.hpp  NodeMananger.hpp  Open62541Server.hpp  Open62541_Server.hpp  ServerConfig.hpp  Utility.hpp
includes/Serializer/: Config.hpp  Config_Serializer.hpp
includes/Server/: CallbackRepo.hpp  Configuration.hpp  HaSLL_Logger.hpp  Historizer.hpp  Logger.hpp  NodeBuilder.hpp  NodeCallbackHandler.hpp  NodeId.hpp  Open62541Server.hpp  Runner.hpp  Utility.hpp
includes/Server_Runner/: Server_Runner.hpp
includes/Utilities/: CheckStatus.hpp  Exceptions.hpp  StringConverter.hpp  UaVariantOperators.hpp  VariantConverter.hpp
includes/utilities/: CStringFormater.hpp  DataValueIdentifier.hpp  JsonDeserializer.hpp
modules/Data_Consumer_Notifier-0.0.0-Linux/: data_consumer_notifier-config.cmake
modules/HaSLL-1.1.47-Linux/: README.md
modules/Information_Model-0.0.0-Linux/: information_model-config.cmake
sources/: CMakeLists.txt
sources/Adapter/: CMakeLists.txt  OpcuaAdapter.cpp  Open62541Adapter.cpp
sources/ConsumerNotifier/: CMakeLists.txt  ConsumerNotifier.cpp
sources/DataValueIdentifier/: CMakeLists.txt  DataValueIDentifier.cpp
sources/Example/: CMakeLists.txt  main.cpp
sources/Historizer/: CMakeLists.txt  HistorianBits.cpp  Historizer.cpp  HistorizerUtils.cpp
sources/NodeBuilder/: CMakeLists.txt  NodeBuilder.cpp
sources/NodeDescriptionSerializers/: BaseNodeDescriptionSerializer.cpp  CMakeLists.txt  NodeDescriptionSerializer.cpp  ObjectNodeDescriptionSerializer.cpp  VariableNodeDescriptionSerializer.cpp
sources/OpcuaAdapter/: CMakeLists.txt  OpcuaAdapter.cpp
sources/Opcua_Adapter/: CMakeLists.txt  OpcuaAdapter.cpp
sources/Opcua_Logger/: CMakeLists.txt
sources/Open62541_Server/: CMakeLists.txt  Config_Serializer.cpp  Configuration.cpp  DatabaseDriver.cpp  HaSLLLogger.cpp  HaSLL_Logger.cpp  Historizer.cpp  NodeBuilder.cpp  NodeCallbackHandler.cpp  NodeId.cpp  NodeMananger.cpp  NullLogger.cpp  Open62541Server.cpp  Open62541_Server.cpp  SQL_DataTypes.h  ServerConfig.cpp  Utility.cpp  server_config.cpp
sources/Serializer/: CMakeLists.txt  Config.cpp  Config_Serializer.cpp
sources/Server/: CMakeLists.txt  CallbackRepo.cpp  Configuration.cpp  HaSLL_Logger.cpp  Historizer.cpp  Logger.cpp  NodeBuilder.cpp  NodeCallbackHandler.cpp  NodeId.cpp  Open62541Server.cpp  Runner.cpp  Utility.cpp
sources/Server_Runner/: CMakeLists.txt  Server_Runner.cpp
sources/Utilities/: CMakeLists.txt  CheckStatus.cpp  StringConverter.cpp  UaVariantOperators.cpp  VariantConverter.cpp
sources/runner/: CMakeLists.txt  main.cpp
sources/utilites/: CMakeLists.txt  CStringFormater.cpp
test_package/: CMakeLists.txt  example.cpp
tests/unit_tests/: CMakeLists.txt
tests/unit_tests/NodeInformation/: BaseNodeDescriptorTests.hpp  CMakeLists.txt  NodeDescriptorTests.hpp  NodeDescriptorsTestUtils.hpp  NodeInformationTestSuite.cpp  NodeInformationTests.cpp  ObjectNodeDescriptorTests.hpp  VariableNodeDescriptorTests.hpp
tests/unit_tests/NodeInformation/config/: BaseNodeDescriptor.json  BaseNodeDescriptors.json  VariableNodeDescriptors.json
tests/unit_tests/NodeInformation/config/expected_results/: FaillingNodeDescriptors.json  FaillingObjectNodeDescriptors.json  FaillingVariableNodeDescriptors.json
tests/unit_tests/NodeInformation/config/expected_results/BaseNodeResults/: FaillingBaseNodeDescriptors.json  PassingBaseNodeDescriptors.json
tests/unit_tests/NodeInformation/config/expected_results/NodeDescriptorResults/: PassingNodeDescriptors.json
tests/unit_tests/NodeInformation/config/expected_results/ObjectNodeResults/: FaillingObjectNodeDescriptors.json  PassingObjectNodeDescriptors.json
tests/unit_tests/NodeInformation/config/expected_results/VariableNodeResults/: PassingVariableNodeDescriptors.json
tests/unit_tests/NodeInformation/config/test_inputs/: NodeDescriptors.json
tools/: check_code_coverage.sh
unit_tests/: CMakeLists.txt  Open62541ServerTests.cpp  SharedTestResources.hpp  testRunner.cpp
unit_tests/Device/: NodeBuilderTests.cpp  NodeCallbackHandlerTests.cpp  Open62541ServerTests.cpp
utility/: .check_code_coverage.sh  .do_release.sh  .lcov-ignores  .make_public.sh  .package_template.sh  .run_linter.sh  .run_valgrind.sh  .template_installer.sh  .update_versioning.sh  Doxyfile  checkCodeCoverage.py  configure_project.sh  run-lcov.py  run-valgrind.py  runValgrind.py
(+21412 files in other folders)
