set(THIS Model_Translator)

#add_subdirectory(utilites)
#add_subdirectory(DataValueIdentifier)
#add_subdirectory(NodeDescriptionSerializers)
#add_subdirectory(Consumer_Notifier)
add_subdirectory(Open62541_Server)
add_subdirectory(Server_Runner)
#add_subdirectory(NodeBuilder)
add_subdirectory(OpcuaAdapter)
add_subdirectory(runner)