
#@+ ======================== User MODULE NAME configuration ============================
set(THIS Example)
#@- =========================== END OF USER CONFIGURATION ===============================

set(MODULE ${PROJECT_NAME}_${THIS})

file(GLOB sources_list "${CMAKE_CURRENT_LIST_DIR}/*.cpp")

add_executable(${MODULE})              

target_sources(${MODULE} PRIVATE 
                       ${sources_list}
)

target_link_libraries(${MODULE} PRIVATE
                              ${PROJECT_NAME}
                              GTest::GTest
)

target_compile_features(${MODULE} PUBLIC cxx_std_17)

add_custom_command(TARGET ${MODULE} POST_BUILD 
                    COMMAND ${CMAKE_COMMAND} -E copy_directory
                        ${PROJECT_SOURCE_DIR}/config
                        $<TARGET_FILE_DIR:${MODULE}>/config 
                    COMMENT "Copying configuration files."
                        VERBATIM
)

if(WIN32)
    add_custom_command(TARGET ${MODULE_NAME} POST_BUILD
                        COMMAND ${CMAKE_COMMAND} -E copy 
                        -t $<TARGET_FILE_DIR:${MODULE_NAME}> 
                        $<TARGET_RUNTIME_DLLS:${MODULE_NAME}>
                        COMMAND_EXPAND_LISTS
    )
    # Workaround to get conan .dll files into build
    foreach(directory ${CONAN_RUNTIME_LIB_DIRS})
        file(GLOB dir_dependencies "${directory}/*.dll")
        if(dir_dependencies)
            list(APPEND dependencies "${dir_dependencies}")
        endif()
    endforeach()
    add_custom_command(TARGET ${MODULE_NAME} POST_BUILD
                        COMMAND ${CMAKE_COMMAND} -E copy 
                        -t $<TARGET_FILE_DIR:${MODULE_NAME}> 
                        ${dependencies}
                        COMMAND_EXPAND_LISTS
    )
endif()
